kubernetes/apps/kube-system/cilium/gateway/policies/http-redirect.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/httproute_v1.json
# HTTP to HTTPS redirect for all external traffic
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: default
      sectionName: http
  # hostnames:
  #   - "*.dcunha.io"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
