kubernetes/apps/kube-system/cilium/gateway/policies/min-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: min-test-internal
  namespace: test
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
spec:
  hostnames: ["min-test.dcunha.lab"]
  parentRefs:
    - name: internal-gateway
      namespace: default
  rules:
    - backendRefs:
        - name: nginx-test
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: min-test-external
  namespace: test
spec:
  hostnames: ["min-test.dcunha.io"]
  parentRefs:
    - name: external-gateway
      namespace: default
  rules:
    - backendRefs:
        - name: nginx-test
          port: 80
