kubernetes/apps/kube-system/cilium/gateway/policies/allow-gateway-to-all.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-gateway-to-all
spec:
  description: "Allow Envoy Gateway to communicate with all pods in the cluster"
  endpointSelector:
    matchExpressions:
      - { key: k8s:io.kubernetes.pod.namespace, operator: Exists }
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: internal-gateway
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: external-gateway
